moving req and res model to dto folder, and changing some swagger docs
