# controllers/task-controller.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 	"todo-app/config"
 	"todo-app/models"
+	dto "todo-app/models/dto"
 	"todo-app/utils"
 
 	"github.com/labstack/echo/v4"
@@ -18,7 +19,7 @@ import (
 // @Accept json
 // @Produce json
 // @Security BearerAuth
-// @Param task body models.Task true "Task"
+// @Param task body dto.TaskRequest true "Task"
 // @Success 201 {object} models.Response
 // @Failure 400 {object} map[string]string
 // @Failure 500 {object} map[string]string
@@ -26,14 +27,18 @@ import (
 func CreateTask(c echo.Context) error {
 	userID := utils.GetUserID(c)
 	var task models.Task
+	var taskRequest dto.TaskRequest
 
-	if err := c.Bind(&task); err != nil {
+	if err := c.Bind(&taskRequest); err != nil {
 		return c.JSON(http.StatusBadRequest, map[string]string{
 			"message": "invalid input",
 		})
 	}
 
 	task.UserID = userID
+	task.Title = taskRequest.Title
+	task.Description = taskRequest.Description
+	task.Completed = taskRequest.Completed
 
 	if err := config.DB.Create(&task).Error; err != nil {
 		return c.JSON(http.StatusInternalServerError, map[string]string{
@@ -41,7 +46,7 @@ func CreateTask(c echo.Context) error {
 		})
 	}
 
-	return c.JSON(http.StatusCreated, models.Response{Message: "task created", Data: models.TaskResponse{
+	return c.JSON(http.StatusCreated, dto.Response{Message: "task created", Data: dto.TaskResponse{
 		ID:          task.ID,
 		Title:       task.Title,
 		Description: task.Description,
@@ -70,9 +75,9 @@ func GetTasks(c echo.Context) error {
 		})
 	}
 
-	var taskResponses []models.TaskResponse
+	var taskResponses []dto.TaskResponse
 	for _, task := range tasks {
-		taskResponses = append(taskResponses, models.TaskResponse{
+		taskResponses = append(taskResponses, dto.TaskResponse{
 			ID:          task.ID,
 			Title:       task.Title,
 			Description: task.Description,
@@ -82,7 +87,7 @@ func GetTasks(c echo.Context) error {
 		})
 	}
 
-	return c.JSON(http.StatusOK, models.Response{Message: "task retrived", Data: taskResponses})
+	return c.JSON(http.StatusOK, dto.Response{Message: "task retrived", Data: taskResponses})
 }
 
 // GetTaskById godoc
@@ -112,9 +117,9 @@ func GetTaskById(c echo.Context) error {
 		})
 	}
 
-	return c.JSON(http.StatusOK, models.Response{
+	return c.JSON(http.StatusOK, dto.Response{
 		Message: "success",
-		Data: models.TaskResponse{
+		Data: dto.TaskResponse{
 			ID:          task.ID,
 			Title:       task.Title,
 			Description: task.Description,
@@ -133,7 +138,7 @@ func GetTaskById(c echo.Context) error {
 // @Produce json
 // @Security BearerAuth
 // @Param id path string true "Task ID"
-// @Param task body models.Task true "Task"
+// @Param task body dto.TaskRequest true "Task"
 // @Success 200 {object} models.Response
 // @Failure 400 {object} map[string]string
 // @Failure 404 {object} map[string]string
@@ -143,7 +148,7 @@ func UpdateTaskById(c echo.Context) error {
 	userID := utils.GetUserID(c)
 	id := c.Param("id")
 	var task models.Task
-	var updatedTask models.Task
+	var updatedTask dto.TaskRequest
 
 	if err := c.Bind(&updatedTask); err != nil {
 		return c.JSON(http.StatusBadRequest, map[string]string{
@@ -168,9 +173,9 @@ func UpdateTaskById(c echo.Context) error {
 		})
 	}
 
-	return c.JSON(http.StatusOK, models.Response{
+	return c.JSON(http.StatusOK, dto.Response{
 		Message: "task updated successfully",
-		Data: models.TaskResponse{
+		Data: dto.TaskResponse{
 			ID:          task.ID,
 			Title:       task.Title,
 			Description: task.Description,
@@ -214,9 +219,9 @@ func DeleteTaskById(c echo.Context) error {
 		})
 	}
 
-	return c.JSON(http.StatusOK, models.Response{
+	return c.JSON(http.StatusOK, dto.Response{
 		Message: "Task deleted successfully",
-		Data: models.TaskResponse{
+		Data: dto.TaskResponse{
 			ID:          task.ID,
 			Title:       task.Title,
 			Description: task.Description,
