# models/dto/task-request.go
@@ -1,0 +1,7 @@
+package models
+
+type TaskRequest struct {
+	Title       string `json:"title"`
+	Description string `json:"description"`
+	Completed   bool   `json:"completed"`
+}
